about block started

--- a/app/index.html
+++ b/app/index.html
@@ -204,12 +204,61 @@
   <main class="main">
     
    
-    <a class="video" style="background-image: url('../images/video-bg.jpg');" data-fancybox href="https://youtu.be/sRVRN2DlDp4">
+    <a class="video" style="background-image: url('images/video/video-bg.jpg');" data-fancybox href="https://youtu.be/sRVRN2DlDp4">
       <span class="video__box"></span>
     </a>
 
     <section class="about">
+      <div class="about__image">
+        <img class="about__img" src="images/about/about-1.png" alt="picture with headphones">
+      </div>
+      <div class="container">
+        <div class="about__inner">
+          <ul class="about__items">
+            <li class="about__item">
+              <div class="about__item-heading">
+                <img class="about__item-img" src="images/about/about-item1.png" alt="">
+                <h4 class="about__item-title">
+                  Hours of wireless <br> playtime
+                </h4>
+              </div>
+              <div class="about__item-text">
+                <p>
+                  The Major III Bluetooth keeps the music going strong with over 30 hours of wireless playtime on a single charge, leaving competitors in the dust.
+                </p>
+              </div>
+            </li>
 
+            <li class="about__item">
+              <div class="about__item-heading">
+                <img class="about__item-img" src="images/about/about-item2.png" alt="">
+                <h4 class="about__item-title">
+                  Bluetooth <br> aptx
+                </h4>
+              </div>
+              <div class="about__item-text">
+                <p>
+                  Bluetooth aptX gives you exceptional audio quality and the freedom and convenience to move within 30 feet of wireless listening range.
+                </p>
+              </div>
+            </li>
+
+            <li class="about__item">
+              <div class="about__item-heading">
+                <img class="about__item-img" src="images/about/about-item3.png" alt="">
+                <h4 class="about__item-title">
+                  Iconic <br> sound
+                </h4>
+              </div>
+              <div class="about__item-text">
+                <p>
+                  Major III Bluetooth features 40 mm dynamic drivers that are custom tuned for enhanced bass, smooth mids and clear highs.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
  
   </main>
