section about finished

--- a/app/index.html
+++ b/app/index.html
@@ -11,17 +11,20 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
- 
+ <div class="overlay"></div>
   <header class="header">
-    <div class="container">
-      <div class="header__top">
-        <a class="logo" href="#">
-          <img class="logo__img" src="images/logo.svg" alt="logo">
-        </a>
-        <button class="button-menu">
-          <span></span>
-        </button>
+    <div class="header__top">
+      <div class="container">
+        <div class="header__top-inner">
+          <a class="logo" href="#">
+            <img class="logo__img" src="images/logo.svg" alt="logo">
+          </a>
+          <button class="button-menu">
+            <span></span>
+          </button>
+        </div>
       </div>
+
     </div>
     <nav class="menu">
       <ul class="menu__list">
@@ -93,7 +96,7 @@
             <div class="swiper-slide header__swiper-slide">
               <div class="header__swiper-text">
                 <h1 class="header__title">
-                  MAJOR III BLUETOOTH
+                  Major III Bluetooth
                 </h1>
                 <div class="header__text">
                   <p>
@@ -152,14 +155,14 @@
               </div>
 
               <div class="header__item-content">
-                <span class="header__item-price">
+                <span class="item-price">
                   $ 149.00
                 </span>
-                <a class="header__item-link" href="#">
+                <a class="item-link" href="#">
                   Shop
                 </a>
               </div>
-            </li> 
+            </li>  
 
             <li class="header__item">
               <div class="header__item-image">
@@ -167,10 +170,10 @@
               </div>
 
               <div class="header__item-content">
-                <span class="header__item-price">
+                <span class="item-price">
                   $ 149.00
                 </span>
-                <a class="header__item-link" href="#">
+                <a class="item-link" href="#">
                   Shop
                 </a>
               </div>
@@ -182,10 +185,10 @@
               </div>
 
               <div class="header__item-content">
-                <span class="header__item-price">
+                <span class="item-price">
                   $ 149.00
                 </span>
-                <a class="header__item-link" href="#">
+                <a class="item-link" href="#">
                   Shop
                 </a>
               </div>
@@ -257,8 +260,120 @@
               </div>
             </li>
           </ul>
+
+          <div class="about-slider">
+            <div class="about-slider__item">
+              <div class="about-slider__card">
+                <div class="about-slider__wrap">
+                  <h3 class="about-slider__title">
+                    MAJOR III BLUETOOTH
+                  </h3>
+                  <div class="about-slider__text">
+                    <p>
+                      Major III Bluetooth is the next chapter in the revolutionary history of Marshall. Major III Bluetooth offers you the freedom and convenience of wireless Bluetooth aptX technology and 30+ hours of playtime on a single charge. 
+                    </p>
+                  </div>
+                  <div class="about-slider__info">
+                    <span class="item-price">
+                      $ 149.00
+                    </span>
+                    <span class="item-color">
+                      black
+                    </span>
+                    <span class="item-available">
+                      in stock
+                    </span>
+                    <a class="item-link" href="#">
+                      Add to cart
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="about-slider__item">
+              <div class="about-slider__card">
+                <div class="about-slider__wrap">
+                  <h3 class="about-slider__title">
+                    MAJOR III BLUETOOTH
+                  </h3>
+                  <div class="about-slider__text">
+                    <p>
+                      Major III Bluetooth is the next chapter in the revolutionary history of Marshall. Major III Bluetooth offers you the freedom and convenience of wireless Bluetooth aptX technology and 30+ hours of playtime on a single charge. 
+                    </p>
+                  </div>
+                  <div class="about-slider__info">
+                    <span class="item-price">
+                      $ 150.00
+                    </span>
+                    <span class="item-color">
+                      white
+                    </span>
+                    <span class="item-available">
+                      in stock
+                    </span>
+                    <a class="item-link" href="#">
+                      Add to cart
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="about-slider__item">
+              <div class="about-slider__card">
+                <div class="about-slider__wrap">
+                  <h3 class="about-slider__title">
+                    MAJOR III BLUETOOTH
+                  </h3>
+                  <div class="about-slider__text">
+                    <p>
+                      Major III Bluetooth is the next chapter in the revolutionary history of Marshall. Major III Bluetooth offers you the freedom and convenience of wireless Bluetooth aptX technology and 30+ hours of playtime on a single charge. 
+                    </p>
+                  </div>
+                  <div class="about-slider__info">
+                    <span class="item-price">
+                      $ 120.00
+                    </span>
+                    <span class="item-color">
+                      brown
+                    </span>
+                    <span class="item-available">
+                      out of stock
+                    </span>
+                    <a class="item-link" href="#">
+                      Add to cart
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="about-subslider">
+            <div class="about-subslider__item">
+              <div class="about-subslider__box">
+                <img class="about-subslider__img" src="images/about/subslider-2.png" alt="">
+              </div>
+            </div>
+            <div class="about-subslider__item">
+              <div class="about-subslider__box">
+                <img class="about-subslider__img" src="images/about/subslider-3.png" alt="">
+              </div>
+            </div>
+            <div class="about-subslider__item">
+              <div class="about-subslider__box">
+                <img class="about-subslider__img" src="images/about/subslider-11.png" alt="">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+    </section>
+
+    <section class="benefits">
+
     </section>
  
   </main>
