benefits finish and specific ations started

--- a/app/index.html
+++ b/app/index.html
@@ -364,7 +364,7 @@
             </div>
             <div class="about-subslider__item">
               <div class="about-subslider__box">
-                <img class="about-subslider__img" src="images/about/subslider-11.png" alt="">
+                <img class="about-subslider__img" src="images/about/subslider-2.png" alt="">
               </div>
             </div>
           </div>
@@ -373,7 +373,62 @@
     </section>
 
     <section class="benefits">
+      <h2 class="title benefits__title">
+        Why you should choose it
+      </h2>
+      <div class="benefits__image">
+        <img class="benefits__img" src="images/benefits/bg.png" alt="headphones">
+      </div>
 
+      <div class="container">
+    
+        <ol class="benefits__list">
+          <li class="benefits__item">
+            <h3 class="benefits__item-title">
+              Phone functionality
+            </h3>
+            <div class="benefits__text">
+              <p>
+                Easy to use phone functionality makes the Major III Bluetooth the perfect everyday companion. Wirelessly answer, reject or end a call with the control knob.
+              </p>
+            </div>
+          </li>
+          <li class="benefits__item">
+            <h3 class="benefits__item-title">
+              Share your music
+            </h3>
+            <div class="benefits__text">
+              <p>
+                When listening to music wirelessly, to share audio with someone else, simply have your friend plug into the free 3.5 mm socket.
+              </p>
+            </div>
+          </li>
+          <li class="benefits__item">
+            <h3 class="benefits__item-title">
+              Collapsible design
+            </h3>
+            <div class="benefits__text">
+              <p>
+                With its collapsible design, Major III Bluetooth is the ultimate travelling companion, able to withstand long days on the road.
+              </p>
+            </div>
+          </li>
+        </ol>
+      </div>
+    </section>
+
+    <section class="specifications">
+      <div class="container">
+        <h2 class="title specifications__title">
+          Technical specifications
+        </h2>
+
+        <div class="specifications__inner">
+          <div class="specifications__image">
+            <img class="specifications__img" src="images/specification/headphones.png" alt="">
+          </div>
+        </div>
+      </div>
     </section>
  
   </main>
