specifications, gallery, reviews

--- a/app/index.html
+++ b/app/index.html
@@ -427,6 +427,166 @@
           <div class="specifications__image">
             <img class="specifications__img" src="images/specification/headphones.png" alt="">
           </div>
+
+
+          <div class="specifications__list">
+
+            <div class="specifications__list-left">
+
+              <div class="specifications__item">
+                <h4 class="specifications__subtitle">
+                  Collapsible design
+                </h4>
+                <div class="specifications__descr">
+                  <p>
+                    It is the ultimate travelling companion, able to withstand long days on the road
+                  </p>
+                </div>
+              </div>
+              <div class="specifications__item">
+                <h4 class="specifications__subtitle">
+                  Control knob
+                </h4>
+                <div class="specifications__descr">
+                  <p>
+                    With the multi-directional control knob you can play, pause, shuffle and adjust the volume of your device, as well as power your headphones on or off
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="specifications__list-right">
+              <div class="specifications__item">
+                <h4 class="specifications__subtitle">
+                  Frequency response
+                </h4>
+                <div class="specifications__descr">
+                  <p>
+                    20 Hz-20kHz
+                  </p>
+                </div>
+              </div>
+              <div class="specifications__item">
+                <h4 class="specifications__subtitle">
+                  Ergonomic fit
+                </h4>
+                <div class="specifications__descr">
+                  <p>
+                    No matter how hard and heavy the music, the super soft ear cushions will rest lightly upon your ears
+                  </p>
+                </div>
+              </div>
+              <div class="specifications__item">
+                <h4 class="specifications__subtitle">
+                  Wired connectivity
+                </h4>
+                <div class="specifications__descr">
+                  <p>
+                    3.5 mm Input
+                  </p>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+ 
+      <div class="specifications__gallery gallary">
+        <div class="gallary__box">
+          <div class="gallary__image">
+            <img class="gallary__img" src="images/specification/gallary1.jpg" alt="phone functionality">
+            <span class="gallary__text">
+              Phone functionality
+            </span>
+          </div>
+          <div class="gallary__image">
+            <img class="gallary__img" src="images/specification/gallary2.jpg" alt="Share your music">
+            <span class="gallary__text">
+              Share your music
+            </span>
+          </div>
+          <div class="gallary__image">
+            <img class="gallary__img" src="images/specification/gallary3.jpg" alt="Collapsible design">
+            <span class="gallary__text">
+              Collapsible design
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="reviews">
+      <div class="container">
+        <h2 class="reviews__title title">
+          Reviews
+        </h2>
+        <div class="reviews__inner">
+          <div class="reviews__content">
+            <div class="reviews__rating">
+              <div class="reviews__rating-title">
+                256 reviews
+              </div>
+              <div class="reviews__rating--box">
+                <div class="star" data-rateyo-rating="5"></div>
+                <span class="reviews__rating-num">232</span>
+              </div>
+
+              <div class="reviews__rating--box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <span class="reviews__rating-num">(18)</span>
+              </div>
+
+              <div class="reviews__rating--box">
+                <div class="star" data-rateyo-rating="3"></div>
+                <span class="reviews__rating-num">(5)</span>
+              </div>
+
+              <div class="reviews__rating--box">
+                <div class="star" data-rateyo-rating="2"></div>
+                <span class="reviews__rating-num">(1)</span>
+              </div>
+
+              <div class="reviews__rating--box">
+                <div class="star" data-rateyo-rating="1"></div>
+                <span class="reviews__rating-num">(0)</span>
+              </div>
+            </div>
+
+            <div class="reviews__write">
+              Write a review
+            </div>
+
+            <div class="reviews__score">
+              Score:
+              <span class="score"></span>
+            </div>
+
+            <form class="reviews__form form">
+              <label class="form__label">
+                Review:
+                <textarea class="form__textarea" required></textarea>
+              </label>
+
+              <label class="form__label">
+                Name:
+                <input class="form__input" type="text" required>
+              </label>
+
+              <label class="form__label">
+                Your photo:
+                <button class="form__btn" type="submit">Upload</button>
+              </label>
+
+              <label class="form__label">
+                POST
+                <button class="post__btn" type="submit">Upload</button>
+              </label>
+            </form>
+
+             
+          </div>
+          <div class="reviews__slider"></div>
         </div>
       </div>
     </section>
