--- a/app/index.html
+++ b/app/index.html
@@ -211,7 +211,7 @@
       <span class="video__box"></span>
     </a>
 
-    <section class="about">
+    <!-- <section class="about">
       <div class="about__image">
         <img class="about__img" src="images/about/about-1.png" alt="picture with headphones">
       </div>
@@ -641,7 +641,7 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <div class="swiper reviews-swiper">
             <div class="swiper-wrapper">
@@ -869,7 +869,7 @@
         </ul>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
 
 
