--- a/app/index.html
+++ b/app/index.html
@@ -797,10 +797,8 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
 
-         
-        
         </div>
       </div>
     </section>
@@ -944,7 +942,7 @@
         </ul>
       </div>
     </div>
-  </footer> -->
+  </footer>
 
 
 
