--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
  <div class="overlay"></div>
-  <header class="header">
+  <header class="header" id="header">
     <div class="header__top">
       <div class="container">
         <div class="header__top-inner">
@@ -29,32 +29,32 @@
     <nav class="menu">
       <ul class="menu__list">
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#header">
             Introducing
           </a>
         </li>
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#header">
             Shop
           </a>
         </li>
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#choose">
             Reasons to choose it
           </a>
         </li>
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#specification">
             Technical specifications
           </a>
         </li>
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#reviews">
             Reviews
           </a>
         </li>
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#contacts">
             Contacts
           </a>
         </li>
@@ -396,7 +396,7 @@
       </div>
     </section>
 
-    <section class="benefits">
+    <section class="benefits" id="choose">
       <h2 class="title benefits__title">
         Why you should choose it
       </h2>
@@ -441,7 +441,7 @@
       </div>
     </section>
 
-    <section class="specifications">
+    <section class="specifications" id="specification">
       <div class="container">
         <h2 class="title specifications__title">
           Technical specifications
@@ -589,7 +589,7 @@
       </div>
     </section>
 
-    <section class="reviews">
+    <section class="reviews" id="reviews">
       <div class="container">
         <h2 class="reviews__title title">
           Reviews
@@ -805,7 +805,7 @@
  
   </main>
 
-  <footer class="footer">
+  <footer class="footer" id="contacts">
     <div class="container">
       <div class="footer__top">
         <ul class="footer__items">
