--- a/app/index.html
+++ b/app/index.html
@@ -533,6 +533,7 @@
                 Wired connectivity
               </a>
              </div>
+
              <div class="specifications-tabs__content">
               <div class="specifications-tabs__content-item specifications-tabs__content-item--active" id="tab-1">
                 <p>
@@ -658,146 +659,103 @@
 
           </div>
 
-          <div class="swiper reviews-swiper">
-            <div class="swiper-wrapper">
-
-              <div class="swiper-slide">
-                <div class="reviews-slider__wrapper">
-                  <div class="reviews-slider__image">
-                    <img src="images/reviews/image1.jpg" alt="andriy">
-                  </div>
-                  <div class="reviews-slider__content">
-                    <span class="reviews-slider__name">
-                      Andriy
-                    </span>
-                    <div class="star" data-rateyo-rating="5"></div>
-                    <div class="reviews-slider__text">
-                      <p>
-                        The best headphones for me. Clearly sound with power bass, cool design, comfortable, a long time battery life. Really love it!
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="reviews-slider__wrapper">
-                  <div class="reviews-slider__image">
-                    <img src="images/reviews/image2.jpg" alt="andriy">
-                  </div>
-                  <div class="reviews-slider__content">
-                    <span class="reviews-slider__name">
-                      Luke
-                    </span>
-                    <div class="star" data-rateyo-rating="5"></div>
-                    <div class="reviews-slider__text">
-                      <p>
-                        Sound and functionality superb. I have owned a pair of wired Major III for a few years and felt the need for the wireless version. 
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="reviews-slider__wrapper">
-                  <div class="reviews-slider__image">
-                    <img src="images/reviews/image1.jpg" alt="andriy">
-                  </div>
-                  <div class="reviews-slider__content">
-                    <span class="reviews-slider__name">
-                      Andriy
-                    </span>
-                    <div class="star" data-rateyo-rating="5"></div>
-                    <div class="reviews-slider__text">
-                      <p>
-                        The best headphones for me. Clearly sound with power bass, cool design, comfortable, a long time battery life. Really love it!
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="swiper-slide">
-                <div class="reviews-slider__wrapper">
-                  <div class="reviews-slider__image">
-                    <img src="images/reviews/image2.jpg" alt="andriy">
-                  </div>
-                  <div class="reviews-slider__content">
-                    <span class="reviews-slider__name">
-                      Luke
-                    </span>
-                    <div class="star" data-rateyo-rating="5"></div>
-                    <div class="reviews-slider__text">
-                      <p>
-                        Sound and functionality superb. I have owned a pair of wired Major III for a few years and felt the need for the wireless version. 
-                      </p>
-                    </div>
-                  </div>
-                </div>
+          <div class="swiper__box">
+            <div class="swipe-hidden">
+              
+              <div class="swiper-hidden__arrows">
+                <span>swipe</span>
+                <svg class="swipe-top" width="12" height="21" viewBox="0 0 12 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11.5 19.8999L1 10.5999L11.5 0.999903" stroke="#C6C6C6" stroke-width="1.2"/>
+                </svg>
+                <svg class="swipe-bot" width="13" height="21" viewBox="0 0 13 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1 1L11.5 10.3L1 19.9" stroke="#C6C6C6" stroke-width="1.2"/>
+                </svg>
               </div>
             </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-scrollbar"></div>
+
+            <div class="swiper reviews-swiper">
+              <div class="swiper-wrapper">
+  
+                <div class="swiper-slide">
+                  <div class="reviews-slider__wrapper">
+                    <div class="reviews-slider__image">
+                      <img src="images/reviews/image1.jpg" alt="andriy">
+                    </div>
+                    <div class="reviews-slider__content">
+                      <span class="reviews-slider__name">
+                        Andriy
+                      </span>
+                      <div class="star" data-rateyo-rating="5"></div>
+                      <div class="reviews-slider__text">
+                        <p>
+                          The best headphones for me. Clearly sound with power bass, cool design, comfortable, a long time battery life. Really love it!
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="swiper-slide">
+                  <div class="reviews-slider__wrapper">
+                    <div class="reviews-slider__image">
+                      <img src="images/reviews/image2.jpg" alt="andriy">
+                    </div>
+                    <div class="reviews-slider__content">
+                      <span class="reviews-slider__name">
+                        Luke
+                      </span>
+                      <div class="star" data-rateyo-rating="5"></div>
+                      <div class="reviews-slider__text">
+                        <p>
+                          Sound and functionality superb. I have owned a pair of wired Major III for a few years and felt the need for the wireless version. 
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="swiper-slide">
+                  <div class="reviews-slider__wrapper">
+                    <div class="reviews-slider__image">
+                      <img src="images/reviews/image1.jpg" alt="andriy">
+                    </div>
+                    <div class="reviews-slider__content">
+                      <span class="reviews-slider__name">
+                        Andriy
+                      </span>
+                      <div class="star" data-rateyo-rating="5"></div>
+                      <div class="reviews-slider__text">
+                        <p>
+                          The best headphones for me. Clearly sound with power bass, cool design, comfortable, a long time battery life. Really love it!
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+  
+                <div class="swiper-slide">
+                  <div class="reviews-slider__wrapper">
+                    <div class="reviews-slider__image">
+                      <img src="images/reviews/image2.jpg" alt="andriy">
+                    </div>
+                    <div class="reviews-slider__content">
+                      <span class="reviews-slider__name">
+                        Luke
+                      </span>
+                      <div class="star" data-rateyo-rating="5"></div>
+                      <div class="reviews-slider__text">
+                        <p>
+                          Sound and functionality superb. I have owned a pair of wired Major III for a few years and felt the need for the wireless version. 
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+              <div class="swiper-scrollbar"></div>
+            </div>
           </div>
-
-          <!-- <div class="reviews-slider">
-
-            <div class="reviews-slider__item">
-              <div class="reviews-slider__wrapper">
-                <div class="reviews-slider__image">
-                  <img src="images/reviews/image1.jpg" alt="andriy">
-                </div>
-                <div class="reviews-slider__content">
-                  <span class="reviews-slider__name">
-                    ANDRIY
-                  </span>
-                  <div class="star" data-rateyo-rating="5"></div>
-                  <div class="reviews-slider__text">
-                    <p>
-                      The best headphones for me. Clearly sound with power bass, cool design, comfortable, a long time battery life. Really love it!
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="reviews-slider__item">
-              <div class="reviews-slider__wrapper">
-                <div class="reviews-slider__image">
-                  <img src="images/reviews/image2.jpg" alt="andriy">
-                </div>
-                <div class="reviews-slider__content">
-                  <span class="reviews-slider__name">
-                    Luke
-                  </span>
-                  <div class="star" data-rateyo-rating="5"></div>
-                  <div class="reviews-slider__text">
-                    <p>
-                      Sound and functionality superb. I have owned a pair of wired Major III for a few years and felt the need for the wireless version. 
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="reviews-slider__item">
-              <div class="reviews-slider__wrapper">
-                <div class="reviews-slider__image">
-                  <img src="images/reviews/image1.jpg" alt="andriy">
-                </div>
-                <div class="reviews-slider__content">
-                  <span class="reviews-slider__name">
-                    Andriy
-                  </span>
-                  <div class="star" data-rateyo-rating="5"></div>
-                  <div class="reviews-slider__text">
-                    <p>
-                      The best headphones for me. Clearly sound with power bass, cool design, comfortable, a long time battery life. Really love it!
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>-->
 
         </div>
       </div>
