btn upload fixe

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marshall headphones page</title>
+  <link rel="icon" href="images/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Open+Sans&display=swap" rel="stylesheet">
@@ -638,16 +639,11 @@
                  </label>
    
                 
-                 <div class="form__upload">
+                 <input class="form__file" type="file" id="file" accept="image/*" name="uploadfile">
+                 <label class="form__upload form__label" for="file">
                    Your photo:
-                   <button class="form__btn" type="submit">Upload</button>
-                 </div>
-   
-                 <label>
-                   Your photo:
-                   <input class="upload" type="file" name="file" multiple>
                    <span>Upload</span>
-                 </label>
+                  </label>
    
                  <button class="post__btn" type="submit">Post</button>
                
